--- a/staging/skin.confluence.bossanova808.omega/language/resource.language.en_gb/strings.po
+++ b/staging/skin.confluence.bossanova808.omega/language/resource.language.en_gb/strings.po
@@ -586,9 +586,7 @@ msgctxt "#31390"
 msgid "Skin default"
 msgstr ""
 
-msgctxt "#31391"
-msgid "Skin default with no caps"
-msgstr ""
+#empty string with id 31391
 
 msgctxt "#31392"
 msgid "Arial based"
