--- a/staging/skin.confluence.bossanova808.omega/language/resource.language.ko_kr/strings.po
+++ b/staging/skin.confluence.bossanova808.omega/language/resource.language.ko_kr/strings.po
@@ -5,17 +5,17 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: KODI Main\n"
-"Report-Msgid-Bugs-To: https://github.com/xbmc/xbmc/issues/\n"
+"Report-Msgid-Bugs-To: translations@kodi.tv\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2023-04-22 10:15+0000\n"
-"Last-Translator: Christian Gade <gade@kodi.tv>\n"
+"PO-Revision-Date: 2024-03-12 18:57+0000\n"
+"Last-Translator: Minho Park <parkmino@gmail.com>\n"
 "Language-Team: Korean <https://kodi.weblate.cloud/projects/kodi-add-ons-skins/skin-confluence/ko_kr/>\n"
 "Language: ko_kr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.15.2\n"
+"X-Generator: Weblate 5.4\n"
 
 msgctxt "Addon Summary"
 msgid "Confluence skin by Jezz_X."
@@ -99,19 +99,19 @@ msgstr "N/A"
 
 msgctxt "#31018"
 msgid "Set default startup item"
-msgstr ""
+msgstr "기본 시작 항목 설정"
 
 msgctxt "#31019"
 msgid "Press 'Up' to set this item as default"
-msgstr ""
+msgstr "이 항목을 기본값으로 설정하려면 '위로'를 누르세요"
 
 msgctxt "#31020"
 msgid "Game saves"
-msgstr ""
+msgstr "게임 저장"
 
 msgctxt "#31021"
 msgid "Movie title format"
-msgstr ""
+msgstr "영화 제목 형식"
 
 # empty strings from id 31018 to 31021
 msgctxt "#31022"
@@ -148,7 +148,7 @@ msgstr "팬아트"
 
 msgctxt "#31030"
 msgid "No changes"
-msgstr ""
+msgstr "변경 사항 없음"
 
 msgctxt "#31031"
 msgid "Pic thumbs"
@@ -164,23 +164,23 @@ msgstr "정보"
 
 msgctxt "#31034"
 msgid "Original title (Localised title)"
-msgstr ""
+msgstr "원래 제목 (현지화된 제목)"
 
 msgctxt "#31035"
 msgid "Localised title (Original title)"
-msgstr ""
+msgstr "현지화된 제목 (원래 제목)"
 
 msgctxt "#31036"
 msgid "Just Original title"
-msgstr ""
+msgstr "원래 제목만"
 
 msgctxt "#31037"
 msgid "Select + X"
-msgstr ""
+msgstr "선택 + X"
 
 msgctxt "#31038"
 msgid "Select + Start"
-msgstr ""
+msgstr "선택 + 시작"
 
 msgctxt "#31039"
 msgid "Actions"
@@ -192,7 +192,7 @@ msgstr "지금 재생 중"
 
 msgctxt "#31041"
 msgid "Select + Right Stick"
-msgstr ""
+msgstr "선택 + 오른쪽 스틱"
 
 msgctxt "#31042"
 msgid "PLAYING"
